# popw

./: CMakeLists.txt  README.md  brain.cpp  field.cpp  field.h  main.cpp  matrixc.cpp  matrixc.h  pop.cpp  pop.h
config/: param.ini
scripts/: GenomeScope.py  PlotNet.py  chromosome_data.csv
src/: bigmemory.h  brain.cpp  brain.h  colors.h  common.cpp  common.h  field.cpp  field.h  genome.cpp  genome.h  imager.h  main.cpp  neuron.cpp  neuron.h  param.ini  params.cpp  params.h  pop.cpp  pop.h  popsspv.cpp  popsspv.h  popworld.cpp  popworld.h
